# GoofyGoober

./: .gitignore  CMakeLists.txt  README.md
data/: progress.txt  questions.txt  responses.txt
include/: Button.h  QuestionManager.h
src/: QuestionManager.cpp  main.cpp
